# nogent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  DEPLOY.md  Makefile  README.md  clippy.toml
.github/workflows/: image.yml
crates/nogent-core/: Cargo.toml
crates/nogent-core/prompts/: README.md  issue-triage.system.md  pr-review.system.md
crates/nogent-core/src/: diff_digest.rs  error.rs  events.rs  gemini.rs  hmac_verify.rs  lib.rs  output_validator.rs  repo_config.rs
crates/nogent-core/src/prompts/: issue_triage.rs  mod.rs  pr_review.rs
crates/nogent-listener/: Cargo.toml
crates/nogent-listener/src/: app_auth.rs  config.rs  gemini_client.rs  github_client.rs  github_mint.rs  main.rs  repo_index.rs  review.rs  triage.rs  webhook.rs
crates/nogent-listener/testdata/: test_rsa_key.pem
deploy/: Caddyfile  NOGENT.example.md  github-app-manifest.json  nogent-listener.service  nogent.example.json  nonobot.example.json
deploy/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars  user_data.sh.tftpl  variables.tf  versions.tf
docker/: Caddyfile  Dockerfile  README.md  compose.yaml
docker/reference/: Dockerfile  Dockerfile-CI  Dockerfile-headless  Dockerfile-musl  Dockerfile-musl-cross  README.md
scripts/: release.sh
