[package]
name = "nogent-listener"
version = "0.2.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "nogent-listener"
path = "src/main.rs"

[dependencies]
nogent-core = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zeroize = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
regex = { workspace = true }
